added and adjusting title. Plus more CSS

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,2 +1,10 @@
-$primary-color:black;
+$primary-color:#272727;
 $secondary-color:white;
+$landing-text:rgb(4, 150, 187);
+$main-text: black;
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
