--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,21 +1,61 @@
 @import './variables';
 
 body{
-   height: 100%; 
+   //height: 100%; 
    background: url("../img/18410.jpg");
    background-size: cover;
-   margin: 0;
+   font-family: 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   line-height: 1;
 }
-
+.title{
+   padding-top: 40vh;
+}
 .landing-page{
-   background: teal;
-  
+   background: $primary-color;
+   
+   
    height: 100vh;
+   overflow: hidden;
+   align-items: center;
+   text-align: center;
+   
 }
 
-.navbar{
-   ul{
+.nav-bar{
+
+      list-style-type: none;
       margin:0;
-   }
    
+   
+}
+h1, h2, h3{
+   font-weight: 400;
+}
+a{
+   color: $secondary-color;
+   text-decoration: none;
+}
+header{
+   
+   position: fixed;
+   z-index: 2;
+   width: 100%;
+   padding: 1rem;
+}
+.main{
+   height: 100%;
+   width: 100%;
+
+   .social-icons{
+      position: fixed;
+      bottom: 1rem;
+      left: 1rem;
+
+      a{
+         padding: 0.4rem;
+         &:hover{
+            color: $landing-text;
+         }
+      }
+   }
 }
