--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -1,9 +1,44 @@
+@import 'helpers';
+
 .recent-projects{
+    margin-top: 3rem;
     height:100vh;
-    width:500px;
-}
-.project-card{
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 40%;
+    align-items: center;
+    text-align: center;
+    //width:500px;
+    h1{
+        padding: 2rem;
+    }
+    .project-grid{
+        display: grid;
+        grid-template-columns: repeat(3, 33.33%);
+        //column-gap: 0.5rem;
+        //left: 15vh;
+        //right: 15vh;
+        width: 80vw;
+        margin: 0 auto 0 auto;
+        padding: 2rem 0 2rem 0;
+         //align-items: center;
+        //text-align: center;
+    }
+    .project-card{
+        justify-self: center;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.1);
+        border-radius: 10px;
+        height: 240px;
+        width: 360px;
+        background-color: rgb(59, 124, 221);
+        &:hover{
+            box-shadow: 0 5px 9px 0 rgba(0,0,0,0.3);
+            @include transition-ease;
+        }
+        #proj1{
+            z-index: 2;
+            background: url("../img/AniCal_logo.png") no-repeat;
+            background-size: 40% 30%;
+            background-position: center;
+            height: 100%;
+            width: 100%;
+        }
+    }
 }
