--- a/scss/main.scss
+++ b/scss/main.scss
@@ -28,7 +28,7 @@ body{
    .name{
       font-size: 5rem;
       padding-bottom: 1rem;
-      margin-top: 1rem;
+      margin-bottom: 1rem;
       border-bottom: 2px solid #fff;
       color: $landing-text;
       .last{
