--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -18,7 +18,7 @@
         top: 0.5rem;
         width: 18px;
         height: 3px;
-        background-color: $secondary-color;
+        background-color: $secondary-textcolor;
         @include transition-ease;
 
         &::before{
