--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -15,14 +15,10 @@
     display: grid;
     grid-template-columns: repeat(3, 33.33%);
     position: relative;
-    //column-gap: 0.5rem;
-    //left: 15vh;
-    //right: 15vh;
     width: 80vw;
     margin: 0 auto 0 auto;
     padding: 2rem 0 2rem 0;
-     //align-items: center;
-    //text-align: center;
+ 
 }
 .project-card{
     position: relative;
@@ -31,15 +27,28 @@
     border-radius: 10px;
     height: 240px;
     width: 360px;
-    
+    background:rgb(6, 4, 34);
+    .img-background{
+        background:url("../img/AniCal-Backdrop.jpg") no-repeat;
+        background-position: center;
+        background-size: auto;
+        position: absolute;
+        border-radius: 10px;
+        z-index:1;
+        height: 100%;
+        width: 100%;
+        @include transition-ease;
+    }
     &:hover{
         box-shadow: 0 5px 9px 0 rgba(0,0,0,0.3);
-        @include transition-ease;
+       // @include transition-ease;
         #proj1-container{
             opacity:0;
             
         }
-       
+        .img-background{
+            opacity: 0;
+        }
     }
     #proj1-container{
         display: flex;
@@ -48,13 +57,13 @@
         z-index: 2;
         position: absolute;
         border-radius: 10px;
-        background-color: rgb(74, 135, 228);
+        //background-color: rgba(74, 136, 228, 0.938);
         height: 100%;
         width: 100%;
         overflow: hidden;
         @include transition-ease;
         img{ 
-            z-index: 3;
+            //z-index: 3;
             height: 40%;
             width: 70%;
              
@@ -62,6 +71,7 @@
         
     }
     figcaption{
+        color: $secondary-textcolor;
         position: absolute;
         text-align: center;
     }
