--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,5 @@
 $primary-color:#272727;
-$secondary-color:white;
+$secondary-textcolor:white;
 $landing-text:rgb(4, 150, 187);
 $main-text: black;
 
