--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -28,7 +28,7 @@
             left: 0px;
             width: 28px;
             height: 3px;
-            background-color: $landing-text;
+            background-color: $landing-textcolor;
             @include transition-ease
         }
         &::after{
@@ -38,7 +38,7 @@
             width: 28px;
             height: 3px;
             left: 0px;
-            background-color: $landing-text;
+            background-color: $landing-textcolor;
             @include transition-ease
         }
 
