--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,6 @@
 $primary-color:#272727;
 $secondary-textcolor:white;
-$landing-text:rgb(4, 150, 187);
+$landing-textcolor:rgb(4, 150, 187);
 $main-text: black;
 
 *{
