--- a/scss/main.scss
+++ b/scss/main.scss
@@ -30,7 +30,7 @@ body{
       padding-bottom: 1rem;
       margin-bottom: 1rem;
       border-bottom: 2px solid #fff;
-      color: $landing-text;
+      color: $landing-textcolor;
       .last{
          
          font-weight: 700;
