Finished project world unknown project card

--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -36,7 +36,11 @@
         background:url("../img/AniCal-Backdrop.jpg") no-repeat;
     }
     #casa-bgimg{
+        
         background:url("../img/casanova-Backdrop.jpg") no-repeat;
+    }
+    #pwu-bgimg{
+        background-color: rgb(15, 15, 15);
     }
     .img-background{
         background-position: center;
