--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,5 @@
 $primary-color:#272727;
+$header-textcolor: rgb(6, 4, 34);
 $secondary-textcolor:white;
 $landing-textcolor:rgb(4, 150, 187);
 $main-text: black;
