First draft of about done. Plus footer

--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -7,6 +7,10 @@
     text-align: center;
     //width:500px;
     h1{
+        
+            color:$landing-textcolor;
+            font-weight: 800;
+        
         padding: 2rem;
     }
     
@@ -31,7 +35,7 @@
     border-radius: 15px;
     height: 240px;
     width: 360px;
-    background:rgb(6, 4, 34);
+    background:$primary-color;
     //@include transition-ease;
     #anical-bgimg{
         background:url("../img/AniCal-Backdrop.jpg") no-repeat;
