--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,26 +1,69 @@
 
 .about{
-    h1{
-        padding-left: 15%;
-        color: $header-textcolor;
-    }
-    display: flex;
-    //justify-content: flex-end;
-    justify-content: space-between;
-    .intro{
-        width: 45%;
-        h3{
-            color: $header-textcolor;
-            //padding-right: auto;
-        }
-        p{
-            
-        
-    
-        }
-}
     margin-top: 3rem;
     height: 100vh;
-    //align-items: center;
-    //text-align: center;
+    margin-bottom:3rem;
+    .bio{
+        position: relative;
+        display: grid;
+        grid-template-rows: 30% 80%;
+        margin:0 5rem 0 5rem;
+       // max-width: 200px;
+        //just-items: center;
+        padding-bottom: 3rem;
+        text-align: center;
+        justify-items: center;
+        //padding-left:10%;
+        color: $header-textcolor;
+        h1{
+            color:$landing-textcolor;
+            font-weight: 800;
+        }
+        p{
+            color: $about-textcolor;
+            width: 400px;
+        }
+         
+            
+    }
+    .interests{    
+        display: grid;
+        grid-template-columns: repeat(3,33%);
+        justify-items: center;
+        margin: 7rem 5rem 0 5rem;
+        text-align: center;
+        .interest-container{
+            height: 300px;
+            width: 300px;
+            text-align: center;
+
+            figure{
+                margin: auto;
+                justify-self: center;
+                height: 80px;
+                width: 80px;
+                img{
+                    
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+            figure:nth-child(1)
+            {
+                height: 65px;
+                width: 65px;
+            }
+            figcaption{
+                color:$primary-color;
+                font-size: 1.5rem;
+                font-weight: 999;
+                margin: 2.5rem;
+                text-align: center;
+            }
+            p{
+                color: $about-textcolor;
+            }
+        }
+        
+    }
 }
