--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,13 +4,14 @@
 @import 'menu';
 @import 'helpers';
 
+
 body{
-   //height: 100%; 
+  
    background: url("../img/gplaypattern_@2X.png");
    //background-size: cover;
    //resize:both;
-   font-family: 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-   //line-height: 1;
+   font-family: QuickSand;
+   line-height: 2rem;
 
 }
 
@@ -18,16 +19,17 @@ body{
    padding-top: 40vh;
 }
 .landing-page{
-   //position: fixed;
+
+   padding-left: 10%;
    background: $primary-color;
    line-height: 1;
    color: $secondary-textcolor;
    height: 100vh;
    overflow: hidden;
-   align-items: center;
-   text-align: center;
+   align-items: left;
+   text-align: left;
    .name{
-      font-size: 5rem;
+      font-size: 6rem;
       padding-bottom: 1rem;
       margin-bottom: 1rem;
       border-bottom: 2px solid #fff;
@@ -63,4 +65,21 @@ header{
 }
 main{
    padding: 1.2rem 7rem;
+}
+footer{
+  
+   text-align: center;
+   width: 100%;
+   height: 15rem;
+   background-color: $landing-textcolor;
+   .footer-container{
+      color: $secondary-textcolor;
+      padding-top:6%;
+      
+      
+         i + i{
+            margin-left: 50px;
+         }
+      
+   }
 }
