--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -2,10 +2,11 @@
 @import 'helpers';
 
 .menu-btn{
+    
     position: fixed;
     z-index: 1;
-    right: 2rem;
-    top: 1rem;
+    right: 3rem;
+    top: 2rem;
     height: 20px;
     width: 28px;
     cursor: pointer;
@@ -13,12 +14,13 @@
     @include transition-ease;
 
     .burger{
+        z-index:3;
         position: absolute;
         left: 0px;
         top: 0.5rem;
         width: 18px;
         height: 3px;
-        background-color: $secondary-textcolor;
+        background-color: $landing-textcolor;
         @include transition-ease;
 
         &::before{
@@ -59,6 +61,7 @@
 }
 
 .nav{
+    
     position: fixed;
     z-index: 1;
     top: 0;
@@ -71,18 +74,21 @@
         visibility: visible;
     }
     .nav-bar{
+        background-color: $primary-color;
         z-index: 1;
         display: flex;
-        right:3rem;
+        right: 3rem;
         flex-flow: column wrap;
         align-items:center;
         justify-content: center;
-        height: 20vh;
+        height: 30vh;
         overflow: hidden;
         //background: white;
         list-style-type: none;
         padding-right: 1rem;
         transform: translateX(100%);
+        border: 1px;
+        border-bottom-left-radius: 600px 100px;
         @include transition-ease;
 
         &.open{
