--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 @import 'variables';
 @import 'projects';
+@import 'futureProjects';
 @import 'about';
 @import 'menu';
 @import 'helpers';
@@ -15,7 +16,7 @@
 }
 body{
   position: relative;
-   background: url("../img/gplaypattern_@2X.png");
+   //background: url("../img/gplaypattern_@2X.png");
    //background-size: cover;
    //resize:both;
    font-family: QuickSand;
@@ -23,9 +24,8 @@ body{
 
 }
 
-.title{
-   padding-top: 40vh;
-}
+
+
 .landing-page-wrapper{
    height: 100vh;
    width: 100vw;
@@ -36,50 +36,129 @@ body{
       width: 100%;
       position: absolute;
       z-index: 2;
-      padding-left: 10%;
+      //padding-left: 10%;
       line-height: 1;
       overflow: hidden;
       //align-items: left;
       text-align: left;
       background: $primary-color;
       color: $secondary-textcolor;
-      .name{
-         //z-index: 1;
-         font-size: 6rem;
-         padding-bottom: 1rem;
-         margin-bottom: 1rem;
-         border-bottom: 2px solid #fff;
-         color: $landing-textcolor;
-         .last{
+      border-bottom: 5px solid $landing-textcolor;
+      .title{
+         padding-top: 20vh;
+         margin-left: 10vw;
+         
+         .name{
+            //z-index: 1;
+            font-size: 6rem;
+            padding-bottom: 1rem;
+            color: $landing-textcolor;
             
-            font-weight: 700;
+            .last{
+               color:$secondary-textcolor;
+               //font-weight: 700;
+            }
+            
          }
-      }
-      
+         &>span{
+            display: block;
+            width: 100px;
+            height:3px;
+            background: $landing-textcolor;
+            
+            &::after{
+               content:'';
+               position: absolute;
+               display: block;
+               transform: translate(4rem,1rem);
+               width: 100px;
+               height:3px;
+               background: $landing-textcolor;
+            }
+         }
+                   
+      }  
+      .anchors{
+         padding-top: 2rem;
+         list-style-type: none;
+         .nav-item{
+            display:flex;
+            flex-direction: row;
+            padding:1rem 1rem 1rem 0;
+            font-weight: 600;
+            
+            .sleeve-item{
+               z-index: 1;
+               transform: translateX(-125%);
+               color:$landing-textcolor;
+               opacity:0;
+               @include transition-ease;
+               &.slide{
+                  transform: translateX(0%);
+                  opacity:1;
+               }
+            }
+            .sleeve{
+               width:10vw;
+               height:1.5rem;
+               background: $primary-color;
+               z-index: 2;
+               
+            }
+            .lid-wrapper{
+               margin-right:5px;
+               padding-right: 5px;
+               width: 14px;
+               height: 1.5rem;
+               z-index: 4;
+               //background: $secondary-textcolor;
+               
+               &:hover{
+                  cursor: pointer;
+               }
+               .lid{
+                  @include transition-ease;
+                  display: inline-block;
+                  z-index:1;
+                  width: 2.5px;
+                  height: 1.3rem;
+                  background: $secondary-textcolor;
+                  &.slide{
+                     background:$landing-textcolor;
+                     transform: rotate(-25deg);
+                  }
+               }
+            }
+         }
+      }     
    }
 }
-   
-.nav-bar{
-      z-index:0;
-      list-style-type: none;
-      margin:0;
-      //position: absolute;
-   
-}
+
 h1, h2, h3{
    font-weight: 400;
-}
-a{
-   color: $secondary-textcolor;
-   text-decoration: none;
-}
-header{
+  }
+  
+  .subtitle{
+   width:100%;
+   height: 100%;
+   display: inline-block;
+  // position: relative;
+   //padding:10rem;
    
-   // position: fixed;
-   // z-index: 2;
-   // width: 100%;
-   // padding: 1rem;
-}
+  }
+  .subtitle::before{
+   content:'';
+   //position: absolute;
+   width:15rem;
+   height: 0.1rem;
+   top: 60%;
+   left:200px;
+   background-color:$landing-textcolor;
+   border: 2px $landing-textcolor;
+   border-radius: 500px;
+   
+  }   
+
 main{
    padding: 1.2rem 7rem;
 }
@@ -89,6 +168,7 @@ footer{
    width: 100%;
    height: 15rem;
    background-color: $landing-textcolor;
+   border-top: 5px solid $primary-color;
    .footer-container{
       color: $secondary-textcolor;
       padding-top:6%;
