--- a/scss/_futureProjects.scss
+++ b/scss/_futureProjects.scss
@@ -2,7 +2,7 @@
 
 
 .future-projects{
-    
+    border-bottom: 1px solid rgba(211, 211, 211, 0.486);
     margin-top: 3rem;
     height:100vh;
     align-items: center;
@@ -32,103 +32,58 @@
     }
 }
 #sec3 > .project-grid{
-    z-index: 0;
+   //    z-index: 0;
     display: grid;
-    grid-template-columns: repeat(2, 50%);
+    grid-auto-flow: column;
     justify-items: center;
+    align-content: center;
+    grid-template-columns: repeat(2, 1fr);
+    //grid-auto-rows: auto;
+    column-gap: 60px;
+    //justify-items: center;
     position: relative;
-    width: 81vw;
-    margin: 0 auto 0 auto;
+    width: 50vw;
+    //margin: 0 auto 0 auto;
     //padding: 2rem 0 2rem 0;
- 
-}
-.project-card{
-    display: flex;
-    position: relative;
-    justify-content: center;
-    //align-items: center;
-    flex-direction: column;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.1);
-    border-radius: 15px;
-    height: 240px;
-    width: 360px;
-    background:$primary-color;
-    //@include transition-ease;
-    #anical-bgimg{
-        background:url("../img/AniCal-Backdrop.jpg") no-repeat;
-    }
-    #casa-bgimg{
-        
-        background:url("../img/casanova-Backdrop.jpg") no-repeat;
-    }
-    #pwu-bgimg{
-        background-color: rgb(15, 15, 15);
-    }
-    .img-background{
-        background-position: center;
-        background-size: auto;
-        position: absolute;
-        border-radius: 13px;
-        z-index: 2;
-        height: 100%;
-        width: 100%;
-        @include transition-ease;
-    }
-    &:hover{
-        box-shadow: 0 5px 9px 0 rgba(0,0,0,0.3);
-        .logo-container{
-            opacity:0;
-            //display: none;
-           z-index: -1;
-        }
-        .img-background{
-            opacity: 0;
-            z-index:-1;
-        }
-        figcaption{
+    .project-card{
+        display: flex;
+        position: relative;
+        //justify-self: stretch;
+        justify-content: center;
+        flex-direction: column;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.1);
+        border-radius: 15px;
+        height: 240px;
+        width: 330px;
+        background-color:$secondary-textcolor;
+        //@include transition-ease;
+        .project-content-wrapper{
+            margin:0 10px 0 10px;
+            h1{
+                padding-bottom: 5px;
+            }
+            div{
+                p{
+                    font-size: 12px;
+                }
+                color:$landing-textcolor;
+                padding-top:20px;
             
-            //@include transition-ease;
-            opacity: 1;
-        }
-    }
-    .logo-container{
-        position: absolute;
-        //top:50%;
-        //align-items: center;
-        z-index:3;
-        @include transition-ease;
-        img{ 
-           // z-index: 2;
-            height: 40%;
-            width: 70%;
-             
-        }
-        
-    }
-    figcaption{
-        @include transition-ease;
-        color: $secondary-textcolor;
-        margin: 15px;
-        //position: absolute;
-        //margin: auto;
-        //visibility: hidden;
-        opacity:0;
-        z-index:1;
-        //text-align: center;
-
-        p{
-            padding-bottom: 1rem;
-        }
-        a:link, a:visited{
-            border: 2px solid $landing-textcolor;
-            padding: 10px 20px;
-            text-align: center;
-            text-decoration: none;
-            @include transition-ease;
-            &:hover{
-                background-color: $landing-textcolor;
             }
         }
+        .logo-container{
+            position: absolute;
+            //top:50%;
+            //align-items: center;
+            z-index:3;
+            @include transition-ease;
+            img{ 
+               // z-index: 2;
+                height: 40%;
+                width: 70%;
+                 
+            }       
+        }
     }
-    
 }
+
