--- a/scss/_helpers.scss
+++ b/scss/_helpers.scss
@@ -4,3 +4,19 @@
 @mixin fast-transition{
     transition: all 0.2s linear;
 }
+
+@mixin media-md{
+    @media screen and (max-width:950px){
+        @content;
+    }
+}
+@mixin media-sm{
+    @media screen and(max-width:1024px){
+        @content;
+    }
+}
+@mixin media-xs{
+    @media screen and(max-width:1600px){
+        @content;
+    }
+}
