--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,13 +1,14 @@
-
+@import 'helpers';
 .about{
     margin-top: 3rem;
     height: 100vh;
     margin-bottom:3rem;
+    text-align: center;
     .bio{
         position: relative;
         display: grid;
         grid-template-rows: 30% 80%;
-        margin:0 5rem 0 5rem;
+        //margin:0 5rem 0 5rem;
        // max-width: 200px;
         //just-items: center;
         padding-bottom: 3rem;
@@ -27,16 +28,18 @@
             
     }
     .interests{    
-        display: grid;
-        grid-template-columns: repeat(3,33%);
+        display: inline-grid;
+        grid-template-columns: repeat(3, minmax(200px,1fr));
+        column-gap: 2rem;
+        row-gap: 3.5rem;
         justify-items: center;
-        margin: 7rem 5rem 0 5rem;
+        margin: 7rem auto 0 auto;
         text-align: center;
         .interest-container{
             height: 300px;
             width: 300px;
             text-align: center;
-
+            max-width: 300px;
             figure{
                 margin: auto;
                 justify-self: center;
