--- a/scss/_futureProjects.scss
+++ b/scss/_futureProjects.scss
@@ -32,19 +32,16 @@
     }
 }
 #sec3 > .project-grid{
-   //    z-index: 0;
-    display: grid;
-    grid-auto-flow: column;
+    z-index: 0;
+    display: inline-grid;
+    grid-template-columns:repeat(2, minmax(300px,1fr));
+    
+    row-gap: 2rem;
+    column-gap: 2rem;
     justify-items: center;
-    align-content: center;
-    grid-template-columns: repeat(2, 1fr);
-    //grid-auto-rows: auto;
-    column-gap: 60px;
-    //justify-items: center;
-    position: relative;
-    width: 50vw;
-    //margin: 0 auto 0 auto;
-    //padding: 2rem 0 2rem 0;
+    align-items: center;
+    //min-width: 0;
+    margin: 0 auto 0 auto;
     .project-card{
         display: flex;
         position: relative;
