Site is responsive. Few design compromises but project is complete! yay

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -7,7 +7,7 @@
     .bio{
         position: relative;
         display: grid;
-        grid-template-rows: 30% 80%;
+        grid-template-rows: repeat(2 minmax(300px,1fr));
         //margin:0 5rem 0 5rem;
        // max-width: 200px;
         //just-items: center;
