--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -10,7 +10,7 @@
     text-align: center;
     //width:500px;
     .projects-intro{
-
+        
         h1{
             
             color:$landing-textcolor;
@@ -46,6 +46,7 @@
 
 }
 .project-card{
+    z-index: 0;
     display: flex;
     position: relative;
     justify-content: center;
