--- a/scss/_futureProjects.scss
+++ b/scss/_futureProjects.scss
@@ -2,6 +2,7 @@
 
 
 .future-projects{
+    padding-bottom: 2rem;
     border-bottom: 1px solid rgba(211, 211, 211, 0.486);
     margin-top: 3rem;
     height:100vh;
