--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -5,14 +5,14 @@
     z-index: 1;
     top: 0;
     left: 0;
-    width: 20vw;
-    opacity: 0.98;
+    width: 250px;
+    opacity: 1;
     visibility: hidden;
     &.open{
         visibility: visible;
     }
     .menu-btn{
-        margin-left: 5rem;
+        margin-left: 2rem;
         opacity: 1;
         visibility: visible;
         position: absolute;
@@ -72,13 +72,14 @@
         flex-flow: column wrap;
         align-items:center;
         justify-content: center;
-        height: 30vh;
+        height: 100vh;
         overflow: hidden;
         list-style-type: none;
         padding-right: 1rem;
         transform: translateX(-100%);
         border: 1px;
         border-bottom-right-radius: 600px 100px;
+        opacity: 0.95;
         @include transition-ease;
         &.open{
             transform: translateX(0);
