--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,5 +1,9 @@
 
-
+@include media-sm-h{
+    .landing-page-wrapper{
+        height: 1000px;
+    }
+}
 @include media-sm{
     .landing-page-wrapper{
         height:75vh;
