--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,7 +1,7 @@
 @import 'helpers';
 .about{
     margin-top: 3rem;
-    height: 100vh;
+    height: 100%;
     margin-bottom:3rem;
     text-align: center;
     .bio{
@@ -29,6 +29,7 @@
         justify-items: center;
         margin: 7rem auto 0 auto;
         text-align: center;
+        margin-bottom: 3rem;
         .interest-container{
             height: 300px;
             width: 300px;
