--- a/scss/_futureProjects.scss
+++ b/scss/_futureProjects.scss
@@ -4,7 +4,7 @@
     padding-bottom: 2rem;
     border-bottom: 1px solid rgba(211, 211, 211, 0.486);
     margin-top: 3rem;
-    height:100vh;
+    height:100%;
     align-items: center;
     text-align: center;
     .projects-intro{
