Design update. Big headers for dividers with parallax bg image.

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -13,7 +13,7 @@
         justify-items: center;
         color: $header-textcolor;
         h1{
-            color:$landing-textcolor;
+            color:$quanary-textcolor;
             font-weight: 800;
         }
         p{
