--- a/scss/_futureProjects.scss
+++ b/scss/_futureProjects.scss
@@ -1,31 +1,15 @@
 @import 'helpers';
 
 .future-projects{
-    padding-bottom: 2rem;
+    padding-bottom: 10%;
     border-bottom: 1px solid rgba(211, 211, 211, 0.486);
-    margin-top: 3rem;
+    //margin-top: 3rem;
     height:100%;
     align-items: center;
     text-align: center;
-    .projects-intro{
-        h1{          
-            color:$primary-color;
-            font-weight: 800;           
-            padding: 2rem 0 1rem 0;
-        }        
-        p{           
-            padding-bottom: 5rem;
-            a{
-                text-decoration: none;
-            }
-            .name{
-                color:$landing-textcolor;
-                font-weight: bold;
-            }
-        }
-    }
+    
 }
-#sec3 > .project-grid{
+.project-grid-future{
     z-index: 0;
     display: inline-grid;
     grid-template-columns:repeat(2, minmax(300px,1fr));   
@@ -53,7 +37,7 @@
                 p{
                     font-size: 12px;
                 }
-                color:$landing-textcolor;
+                color:$tertiary-textcolor;
                 padding-top:20px;
             
             }
