--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,9 @@
 $primary-color:#272727;
 $header-textcolor: rgb(6, 4, 34);
 $secondary-textcolor:white;
-$landing-textcolor:rgb(4, 150, 187);
+$landing-textcolor:rgb(19, 177, 216);
+$tertiary-textcolor:rgb(255, 204, 153);
+$quanary-textcolor:rgb(44, 0, 125);
 $about-textcolor: rgb(136, 136, 136);
 
 @font-face{
