--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,7 +32,7 @@ body{
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+   background-size: cover;
    .landing-page{
       height: 100%;
       width: 100%;
@@ -87,7 +87,7 @@ body{
                z-index: 1;
                transform: translateX(-125%);
                padding-top: 5px;
-               color:$landing-textcolor;
+               //color:$landing-textcolor;
                opacity:0;
                @include transition-ease;
                &.slide{
@@ -98,7 +98,7 @@ body{
             .sleeve{
                width:10vw;
                height:1.5rem;
-               background: $primary-color;
+               //background: $primary-color;
                z-index: 2;              
             }
             .lid-wrapper{
@@ -130,19 +130,76 @@ body{
 h1, h2, h3{
    font-weight: 400;
 } 
+
+
+.image-container{
+   align-items: center;
+   text-align: center;
+      .bgImage1{
+         background-image: url("../img/splash-bg-c1.png");
+      }
+      .bgImage2{
+         
+         background-image: url("../img/splash-bg-c2.png");
+      }
+      .bgImage1, .bgImage2{
+         position: relative;
+         height: 300px;
+         //opacity: 0.7;
+         /* Create the parallax scrolling effect */
+         background-attachment: fixed;
+         background-position: center;
+         background-repeat: no-repeat;
+         background-size: cover;
+         h1{
+           // opacity:0.8;
+            left: 0;  
+            text-align: center;
+            position: absolute;
+            top:50%;      
+            width: 100%;
+            height:10%;  
+            color:$secondary-textcolor;
+            font-weight: 800;           
+            //padding-top: 50%;  
+         }
+         
+      }
+      .caption{  
+         padding: 5% 0 5% 0;      
+         p{           
+            
+            a{
+               text-decoration: none;
+            }
+            .name{
+               color:$landing-textcolor;
+               font-weight: bold;
+            }
+         }
+      }
+}
+
+      
+
 .subtitle{
    width:100%;
    height: 100%;
    display: inline-block;
 }  
-main{
-   padding: 1.2rem 7rem;
-}
+// main{
+//    //padding: 1.2rem 7rem;
+// }
 footer{
    text-align: center;
    width: 100%;
    height: 15rem;
-   background-color: $landing-textcolor;
+  position: relative;
+   background-image: url("../img/splash-bg-c3.png");
+    background-attachment: fixed;
+   background-position: center;
+   background-repeat: no-repeat;
+    background-size: cover;
    border-top: 5px solid $primary-color;
    .footer-container{
       color: $secondary-textcolor;
